create: added phone-mask

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
               <div class="footer__input_group">
                 <input
                 type="tel"
-                class="input footer__input"
+                class="input footer__input number"
                 placeholder="Phone Number*"
                 name="phone"
                 required
@@ -718,7 +718,7 @@
           />
           <input
             type="tel"
-            class="input modal__input"
+            class="input modal__input number"
             placeholder="Phone Number*"
             name="phone"
             required
@@ -748,6 +748,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
