--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
               <div class="footer__input_group">
                 <input
                 type="tel"
-                class="input footer__input number"
+                class="input footer__input num"
                 placeholder="Phone Number*"
                 name="phone"
                 required
@@ -718,10 +718,11 @@
           />
           <input
             type="tel"
-            class="input modal__input number"
+            class="input modal__input num"
             placeholder="Phone Number*"
             name="phone"
             required
+            maxlength="17"
           />
           <input
             type="email"
